--- a/stylesheet/default.css
+++ b/stylesheet/default.css
@@ -18,8 +18,8 @@ body {
   /* colors */
   --correct-color: #2bc20e;
   --incorrect-color: #cb0000;
-  --background-color: #0e131f;
-  --background-S-color: #f2f7f2;
+  --background-color: #f2f7f2;
+  --text-color: #535c85;
   --extra-color: #e0acd5;
   --extra-dark-color: #e73fc3;
 
